--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "sequelize": "^6.35.2",
     "supertest": "^6.3.4",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1"
   }
 }
