--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   integration-testing:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     container: node:16.18
 
     services:
