--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -16,6 +16,7 @@ jobs:
 
         env:
           POSTGRES_PASSWORD: ${{ secrets.PASSWORD }}
+          POSTGRES_USER: ${{ secrets.USERNAME }}
         
         options: >-
           --health-cmd pg_isready
