--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -17,6 +17,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: ${{ secrets.PASSWORD }}
           POSTGRES_USER: ${{ secrets.USERNAME }}
+          POSTGRES_DB: ${{ secrets.DATABASE_NAME }}
         
         options: >-
           --health-cmd pg_isready
