--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres
+        image: postgres:16
 
         env:
           POSTGRES_PASSWORD: ${{ secrets.PASSWORD }}
@@ -31,6 +31,7 @@ jobs:
     steps:
       - name: Checkout branch 
         uses: actions/checkout@v4
+      - run: echo ${{secrets.USERNAME}}
 
       - name: Install dependencies
         run: npm install
