--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:16
+        image: postgres:12-alpine
 
         env:
           POSTGRES_PASSWORD: ${{ secrets.PASSWORD }}
@@ -37,10 +37,6 @@ jobs:
         run: npm install
       
       - run : sleep 10
-      - run : |
-              until pg_isready -h localhost -p 5432 -U ${{ secrets.USERNAME }}; do
-                sleep 2
-              done
 
       - name: Run tests
         run: npm run test
