--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -15,9 +15,8 @@ jobs:
         image: postgres:12-alpine
 
         env:
-          POSTGRES_PASSWORD: ${{ secrets.PASSWORD }}
-          POSTGRES_USER: ${{ secrets.USERNAME }}
-          POSTGRES_DB: ${{ secrets.DATABASE_NAME }}
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
         
         options: >-
           --health-cmd pg_isready
