--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:12-alpine
+        image: postgres
 
         env:
           POSTGRES_PASSWORD: postgres
@@ -40,7 +40,7 @@ jobs:
       - name: Run tests
         run: npm run test
         env:
-          DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-          DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+          DATABASE_NAME: example
+          USERNAME: postgres
+          PASSWORD: postgres
+          DATABASE_HOST: localhost
