--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -38,6 +38,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Sleep and run 
+        run: |
+          sleep 20
+          docker ps
+
       - name: Run tests
         run: npm run test
         env:
