--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      
+      - run: sudo service docker start
 
       - name: Sleep and run 
         run: |
