--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -8,25 +8,25 @@ on:
 jobs:
   integration-testing:
     runs-on: ubuntu-latest
-    container: node:16.18
+    # container: node:16.18
 
-    services:
-      postgres:
-        image: postgres:latest
+    # services:
+    #   postgres:
+    #     image: postgres:latest
 
-        env:
-          POSTGRES_DB: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+    #     env:
+    #       POSTGRES_DB: postgres
+    #       POSTGRES_USER: postgres
+    #       POSTGRES_PASSWORD: postgres
 
-        ports:
-          - 5432:5432
+    #     ports:
+    #       - 5432:5432
         
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 10s
-          --health-retries 20
+    #     options: >-
+    #       --health-cmd pg_isready
+    #       --health-interval 10s
+    #       --health-timeout 10s
+    #       --health-retries 20
         
         
     
@@ -35,20 +35,26 @@ jobs:
         uses: actions/checkout@v4
 
 
-      - name: Install dependencies
-        run: npm install
+      # - name: Install dependencies
+      #   run: npm install
       
       - run: sudo service docker start
-
-      - name: Sleep and run 
+      
+      - name: starting docker postgres
         run: |
-          sleep 20
+          docker run --name some-postgres -e POSTGRES_PASSWORD=postgres -d postgres
+          sleep 15
           docker ps
 
-      - name: Run tests
-        run: npm run test
-        env:
-          DATABASE_NAME: example
-          USERNAME: postgres
-          PASSWORD: postgres
-          DATABASE_HOST: 127.0.0.1
+      # - name: Sleep and run 
+      #   run: |
+      #     sleep 20
+      #     docker ps
+
+      # - name: Run tests
+      #   run: npm run test
+      #   env:
+      #     DATABASE_NAME: example
+      #     USERNAME: postgres
+      #     PASSWORD: postgres
+      #     DATABASE_HOST: 127.0.0.1
