--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   integration-testing:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     # container: node:16.18
 
     # services:
@@ -46,7 +46,7 @@ jobs:
       
       - name: Create dtabtase
         run: |
-          sudo -u postgres psql --command="CREATE USER postgres PASSWORD postgres"
+          sudo -u postgres psql --command="SELECT * FROM pg_catalog.pg_database"
       
       # - name: starting docker postgres
       #   run: |
@@ -59,10 +59,10 @@ jobs:
       #     sleep 20
       #     docker ps
 
-      - name: Run tests
-        run: npm run test
-        env:
-          DATABASE_NAME: example
-          USERNAME: postgres
-          PASSWORD: postgres
-          DATABASE_HOST: 127.0.0.1
+      # - name: Run tests
+      #   run: npm run test
+      #   env:
+      #     DATABASE_NAME: example
+      #     USERNAME: postgres
+      #     PASSWORD: postgres
+      #     DATABASE_HOST: 127.0.0.1
