--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -50,6 +50,9 @@ jobs:
       
       - name: Change authentication method
         run: sudo -u postgres psql --command="SELECT version();" --command="\du"
+
+      - name: open conf file
+        run: cat /var/lib/postgresql/14/main/pg_hba.conf
       
       # - name: starting docker postgres
       #   run: |
