--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -51,6 +51,9 @@ jobs:
       - name: Change authentication method
         run: sudo -u postgres psql --command="SELECT version();" --command="\du"
 
+      - name: Set permisson on conf file
+        run: sudo chmod 700 /var/lib/postgresql/14/main/pg_hba.conf
+
       - name: open conf file
         run: cat /var/lib/postgresql/14/main/pg_hba.conf
       
