--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -55,7 +55,7 @@ jobs:
         run: sudo chmod 755 /etc/postgresql/16/main/pg_hba.conf
 
       - name: open conf file
-        run: cat /etc/postgresql/16/main/pg_hba.conf
+        run: echo "/etc/postgresql/$(ls /etc/postgresql)/main"
       
       # - name: starting docker postgres
       #   run: |
