--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -27,7 +27,7 @@ jobs:
         run: sudo -u postgres psql -c "ALTER USER postgres PASSWORD '${{ secrets.PASSWORD }}';"
 
       - name: Create database 
-        run: sudo -u postgres createdb -h ${{ secrets.DATABASE_HOST }} -d ${{secrets.DATABASE_NAME}}
+        run: createdb -h ${{ secrets.DATABASE_HOST }} -e ${{secrets.DATABASE_NAME}}
 
       - name: Run tests
         run: npm run test
