creating webapp zip file in workflow

--- a/.github/workflows/packer-validate.yml
+++ b/.github/workflows/packer-validate.yml
@@ -18,6 +18,12 @@ jobs:
         id: setup
         with:
           version: "1.10.1"
+
+      - name: create webapp zip file 
+        run: |
+          cd ..
+          zip -r webapp.zip webapp-forked
+          cp webapp.zip webapp-forked/
       
       - name: Initialize packer
         run: packer init googlecompute.pkr.hcl
