added packer build command

--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -21,3 +21,21 @@ jobs:
 
       - name: 'Use gcloud CLI'
         run: 'gcloud info'
+      
+      - name: Setup packer 
+        uses: hashicorp/setup-packer@main
+        id: setup
+        with:
+          version: "1.10.1"
+      
+      - name: create webapp zip file 
+        run: |
+          cd ..
+          zip -r webapp.zip webapp-forked
+          cp webapp.zip webapp-forked/
+      
+      - name: Initialize packer
+        run: packer init googlecompute.pkr.hcl
+
+      - name: Build image 
+        run: packer build googlecompute.pkr.hcl
