--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -35,7 +35,7 @@ jobs:
           cp webapp.zip webapp-forked/
       
       - name: Initialize packer
-        run: packer init googlecompute.pkr.hcl
+        run: packer init ../../googlecompute.pkr.hcl
 
       - name: Build image 
-        run: packer build googlecompute.pkr.hcl
+        run: packer build ../../googlecompute.pkr.hcl
