--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -33,7 +33,9 @@ jobs:
           cd ../
           zip -r webapp.zip webapp-forked
           cp webapp.zip webapp-forked/
-          cd -
+          ls
+          cd webapp-forked
+          ls
       
       - name: Initialize packer
         run: packer init googlecompute.pkr.hcl
