--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+      - name: Checking out code
+        uses: actions/checkout@v4
+        
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
