--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -1,10 +1,10 @@
 name: packer-build-vm-image
 
 on: 
-  push:
+  pull_request:
     
     branches:
-      - assignment4
+      - main
 
 jobs:
   build-image:
@@ -14,7 +14,7 @@ jobs:
 
       - name: Checking out code
         uses: actions/checkout@v4
-        
+
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
@@ -35,8 +35,8 @@ jobs:
       - name: create webapp zip file 
         run: |
           cd ..
-          zip -r webapp.zip webapp-forked
-          cp webapp.zip webapp-forked/
+          zip -r webapp.zip webapp
+          cp webapp.zip webapp/
       
       - name: Initialize packer
         run: packer init googlecompute.pkr.hcl
