add if condition to check if PR is merged

--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -12,6 +12,7 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
 
+    if: ${{ github.event.pull_request.merged == true }}
     steps:
 
       - name: Checking out code
