--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -9,9 +9,10 @@ on:
 
 jobs:
   integration-testing:
+    if: ${{ github.event.pull_request.merged == true || github.event.action == 'synchronize' || github.event.action == 'opened' }}
+    
     runs-on: ubuntu-20.04
         
-    if: github.event.pull_request.merged == true || github.event.action == "synchronize" || github.event.action == "opened"
     steps:
       - name: Checkout branch 
         uses: actions/checkout@v4
