--- a/webapp.service
+++ b/webapp.service
@@ -5,8 +5,9 @@ After=network.target
 
 [Service]
 Type=simple
-User=adityamysore002
-Group=adityamysore002
+User=csye6225
+Group=csye6225
+EnvironmentFile=/home/adityamysore002/webapp/.env
 WorkingDirectory=/home/adityamysore002
 ExecStart=/home/adityamysore002/.nvm/versions/node/v16.18.0/bin/node /home/adityamysore002/webapp/server.js
 Restart=always
