--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^29.7.0",
     "mocha": "^10.2.0",
     "multer": "^1.4.5-lts.1",
+    "node-json-logger": "^0.2.1",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
