--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
     "supertest": "^6.3.4",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1"
