--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -77,4 +77,5 @@ jobs:
                       fi
                       sudo systemctl daemon-reload
                       sudo systemctl enable webapp.service
-                      sudo systemctl start webapp.service'
+                      sudo systemctl start webapp.service
+                      EOF'
