--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -48,20 +48,24 @@ jobs:
         run: packer build -var "image_name=${{secrets.IMAGE_NAME}}" googlecompute.pkr.hcl
               
 
-      - name: Create new instance template
-        run: gcloud compute instance-templates create ${{secrets.TEMPLATE_NAME}} 
-                --project="dev-aditya-mysore" 
-                --region=${{secrets.REGION}} 
-                --instance-template-region=${{secrets.REGION}} 
-                --image=${{secrets.IMAGE_NAME}} 
-                --machine-type=${{secrets.MACHINE_TYPE}} 
-                --boot-disk-type=${{secrets.DISK_TYPE}} 
-                --boot-disk-size=${{secrets.DISK_SIZE}} 
-                --stack-type=${{secrets.STACK_TYPE}} 
-                --subnet=${{secrets.SUBNET}} 
-                --service-account=${{secrets.VM_SERVICE_ACCOUNT}} 
-                --scopes="cloud-platform" 
-                --network-tier=${{secrets.VM_NETWORK_TIER}} 
-                --boot-disk-kms-key=${{secrets.VM_KMS_KEY}} 
-                --tags=${{secrets.VM_NETWORK_TAGS}} 
-                --metadata=startup-script=${{secrets.VM_STARTUP_SCRIPT}}
+      - name: Create template based on existing instance
+        run: gcloud compute instance-templates create ${{secrets.NEW_INSTANCE_NAME}} \
+              --source-instance=${{secrets.SOURCE_INSTANCE}} \
+              --source-instance-zone=${{secrets.SOURCE_INSTANCE_ZONE}} \
+              --instance-template-region=${{secrets.REGION}} \
+              --configure-disk=device-name=${{secrets.DEVICE_NAME}},instantiate-from=custom-image,custom-image="projects/dev-aditya-mysore/global/images/${{secrets.IMAGE_NAME}}"
+
+      - name: Set the template to the managed instance group
+        run: gcloud compute instance-groups managed set-instance-template ${{secrets.INSTANCE_GROUP}} \
+              --template=projects/dev-aditya-mysore/regions/${{secrets.REGION}}/instanceTemplates/${{secrets.NEW_INSTANCE_NAME}} \
+              --region=${{secrets.REGION}}
+
+      - name: Start rolling update
+        run: gcloud compute instance-groups managed rolling-action start-update ${{secrets.INSTANCE_GROUP}} \
+              --version=template=projects/dev-aditya-mysore/regions/${{secrets.REGION}}/instanceTemplates/${{secrets.NEW_INSTANCE_NAME}} \
+              --region=${{secrets.REGION}}
+
+      - name: Wait for the VMs to be updated with new template
+        run: gcloud compute instance-groups managed wait-until ${{secrets.INSTANCE_GROUP}} \
+              --version-target-reached \
+              --region=${{secrets.REGION}}
