Changed variable names

--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -49,13 +49,13 @@ jobs:
               
 
       - name: Create template based on existing instance
-        run: gcloud compute instance-templates create ${{secrets.NEW_INSTANCE_NAME}} --source-instance=${{secrets.SOURCE_INSTANCE}} --source-instance-zone=${{secrets.SOURCE_INSTANCE_ZONE}} --instance-template-region=${{secrets.REGION}} --configure-disk=device-name=${{secrets.DISK_DEVICE_NAME}},instantiate-from=custom-image,custom-image="projects/dev-aditya-mysore/global/images/${{secrets.IMAGE_NAME}}"
+        run: gcloud compute instance-templates create ${{secrets.NEW_INSTANCE_TEMPLATE}} --source-instance=${{secrets.SOURCE_INSTANCE}} --source-instance-zone=${{secrets.SOURCE_INSTANCE_ZONE}} --instance-template-region=${{secrets.REGION}} --configure-disk=device-name=${{secrets.DISK_DEVICE_NAME}},instantiate-from=custom-image,custom-image="projects/dev-aditya-mysore/global/images/${{secrets.IMAGE_NAME}}"
 
       - name: Set the template to the managed instance group
-        run: gcloud compute instance-groups managed set-instance-template ${{secrets.INSTANCE_GROUP}} --template="projects/dev-aditya-mysore/regions/${{secrets.REGION}}/instanceTemplates/${{secrets.NEW_INSTANCE_NAME}}" --region=${{secrets.REGION}}
+        run: gcloud compute instance-groups managed set-instance-template ${{secrets.INSTANCE_GROUP}} --template="projects/dev-aditya-mysore/regions/${{secrets.REGION}}/instanceTemplates/${{secrets.NEW_INSTANCE_TEMPLATE}}" --region=${{secrets.REGION}}
 
       - name: Start rolling update
-        run: gcloud compute instance-groups managed rolling-action start-update ${{secrets.INSTANCE_GROUP}} --version=template="projects/dev-aditya-mysore/regions/${{secrets.REGION}}/instanceTemplates/${{secrets.NEW_INSTANCE_NAME}}" --region=${{secrets.REGION}}
+        run: gcloud compute instance-groups managed rolling-action start-update ${{secrets.INSTANCE_GROUP}} --version=template="projects/dev-aditya-mysore/regions/${{secrets.REGION}}/instanceTemplates/${{secrets.NEW_INSTANCE_TEMPLATE}}" --region=${{secrets.REGION}}
 
       - name: Wait for the VMs to be updated with new template
         run: gcloud compute instance-groups managed wait-until ${{secrets.INSTANCE_GROUP}} --version-target-reached --region=${{secrets.REGION}}
